TODO: add debug/trace logging to some modules
TODO: use the eval-with-cb-call trick also to speed up JSON?
TODO: FAQ: common pitfalls? invoke-before-return
TODO: FAQ: scope-ids? hosts file order?
TODO: AnyEvent::Handle with AnyEvent::IO?
TODO: invalid. and localhost. specialcasing inside AEDNS and not AESocket (rfc6761)
TODO: maybe implement env variable to give hosts precedence

        - work around a newly introduced bug in Socket 2.011 (an
          errornous sun_length check) (analyzed by Maxime Soulé).
	- AnyEvent::TLS didn't load (but refer to) AnyEvent::Socket
          (analyzed by Ben Magistro).

7.07 Tue Dec 17 17:45:02 CET 2013
	- the documentation for custom tls verify schemes was wrong. make it agree
          with the code (reported by Maxime Soulé).
	- added cbor read and write types to AnyEvent::Handle (using CBOR::XS).
        - work around an API change in openssl that could cause wrong tls connection
          aborts, likely on windows only (analyzed by sten).
        - calling AnyEvent->now_update with AnyEvent::Impl::Perl caused an
          endless loop (reported by Dietrich Rebmann).
        - add tlsv1_1 and tlsv1_2 protocols to AnyEvent::TLS
          (patch by Maxime Soulé).
        - document AnyEvent::Impl::IOAsync::set_loop and
          $AnyEvent::Impl::IOAsync::LOOP. Though only documented now, this
          functionality has _always_ been available.
	- force a toplevel domain name in t/81_hosts.t (analyzed by
          David Jack Wange Olrik).
        - document that AnyEvent::Log uses AnyEvent::IO.
        - warn about AnyEvent::Filesys::Notify performance.
        - praise the joys of AnyEvent::Fork::*.
        - time for an =encoding directive.
        - do no longer use JSON to create a default json coder, use
          JSON::XS or JSON::PP directly.

7.05 Wed Aug 21 10:38:08 CEST 2013
	- uts46data.pl couldn't be found due to wrong naming of the file
          (reported by Fulko Hew).