@@ -24,7 +24,7 @@ L<AnyEvent>). However, this module can be loaded manually at any time.
 
 package AnyEvent::Strict;
 
-use Carp qw(croak);
+use Carp qw(confess);
 use Errno ();
 use POSIX ();
 
@@ -93,11 +93,11 @@ sub io {
    my (%arg, $fh, $cb, $fd) = @_;
 
    ref $arg{cb}
-      or croak "AnyEvent->io called with illegal cb argument '$arg{cb}'";
+      or confess "AnyEvent->io called with illegal cb argument '$arg{cb}'";
    $cb = wrap delete $arg{cb};
  
    $arg{poll} =~ /^[rw]$/
-      or croak "AnyEvent->io called with illegal poll argument '$arg{poll}'";
+      or confess "AnyEvent->io called with illegal poll argument '$arg{poll}'";
 
    $fh = delete $arg{fh};
 
@@ -106,15 +106,15 @@ sub io {
       $fh = AnyEvent::_dupfh $arg{poll}, $fh;
    } else {
       defined eval { $fd = fileno $fh }
-         or croak "AnyEvent->io called with illegal fh argument '$fh'";
+         or confess "AnyEvent->io called with illegal fh argument '$fh'";
    }
 
    -f $fh
-      and croak "AnyEvent->io called with fh argument pointing to a file";
+      and confess "AnyEvent->io called with fh argument pointing to a file";
 
    delete $arg{poll};
  
-   croak "AnyEvent->io called with unsupported parameter(s) " . join ", ", keys %arg
+   confess "AnyEvent->io called with unsupported parameter(s) " . join ", ", keys %arg
       if keys %arg;
 
    ++$FD_INUSE[$fd];
@@ -134,18 +134,18 @@ sub timer {
    my %arg = @_;
 
    ref $arg{cb}
-      or croak "AnyEvent->timer called with illegal cb argument '$arg{cb}'";
+      or confess "AnyEvent->timer called with illegal cb argument '$arg{cb}'";
    my $cb = wrap delete $arg{cb};
  
    exists $arg{after}
-      or croak "AnyEvent->timer called without mandatory 'after' parameter";
+      or confess "AnyEvent->timer called without mandatory 'after' parameter";
    delete $arg{after};
  
    !$arg{interval} or $arg{interval} > 0
-      or croak "AnyEvent->timer called with illegal interval argument '$arg{interval}'";
+      or confess "AnyEvent->timer called with illegal interval argument '$arg{interval}'";
    delete $arg{interval};
  
-   croak "AnyEvent->timer called with unsupported parameter(s) " . join ", ", keys %arg
+   confess "AnyEvent->timer called with unsupported parameter(s) " . join ", ", keys %arg
       if keys %arg;
 
    $class->SUPER::timer (@_, cb => $cb)
@@ -156,14 +156,14 @@ sub signal {
    my %arg = @_;
 
    ref $arg{cb}
-      or croak "AnyEvent->signal called with illegal cb argument '$arg{cb}'";
+      or confess "AnyEvent->signal called with illegal cb argument '$arg{cb}'";
    my $cb = wrap delete $arg{cb};
  
    defined AnyEvent::Base::sig2num $arg{signal} and $arg{signal} == 0
-      or croak "AnyEvent->signal called with illegal signal name '$arg{signal}'";
+      or confess "AnyEvent->signal called with illegal signal name '$arg{signal}'";
    delete $arg{signal};
  
-   croak "AnyEvent->signal called with unsupported parameter(s) " . join ", ", keys %arg
+   confess "AnyEvent->signal called with unsupported parameter(s) " . join ", ", keys %arg
       if keys %arg;
 
    $class->SUPER::signal (@_, cb => $cb)
@@ -174,14 +174,14 @@ sub child {
    my %arg = @_;
 
    ref $arg{cb}
-      or croak "AnyEvent->child called with illegal cb argument '$arg{cb}'";
+      or confess "AnyEvent->child called with illegal cb argument '$arg{cb}'";
    my $cb = wrap delete $arg{cb};
  
    $arg{pid} =~ /^-?\d+$/
-      or croak "AnyEvent->child called with malformed pid value '$arg{pid}'";
+      or confess "AnyEvent->child called with malformed pid value '$arg{pid}'";
    delete $arg{pid};
  
-   croak "AnyEvent->child called with unsupported parameter(s) " . join ", ", keys %arg
+   confess "AnyEvent->child called with unsupported parameter(s) " . join ", ", keys %arg
       if keys %arg;
 
    $class->SUPER::child (@_, cb => $cb)
@@ -192,10 +192,10 @@ sub idle {
    my %arg = @_;
 
    ref $arg{cb}
-      or croak "AnyEvent->idle called with illegal cb argument '$arg{cb}'";
+      or confess "AnyEvent->idle called with illegal cb argument '$arg{cb}'";
    my $cb = wrap delete $arg{cb};
  
-   croak "AnyEvent->idle called with unsupported parameter(s) " . join ", ", keys %arg
+   confess "AnyEvent->idle called with unsupported parameter(s) " . join ", ", keys %arg
       if keys %arg;
 
    $class->SUPER::idle (@_, cb => $cb)
@@ -206,10 +206,10 @@ sub condvar {
    my %arg = @_;
 
    !exists $arg{cb} or ref $arg{cb}
-      or croak "AnyEvent->condvar called with illegal cb argument '$arg{cb}'";
+      or confess "AnyEvent->condvar called with illegal cb argument '$arg{cb}'";
    my @cb = exists $arg{cb} ? (cb => wrap delete $arg{cb}) : ();
  
-   croak "AnyEvent->condvar called with unsupported parameter(s) " . join ", ", keys %arg
+   confess "AnyEvent->condvar called with unsupported parameter(s) " . join ", ", keys %arg
       if keys %arg;
 
    $class->SUPER::condvar (@cb);
@@ -219,7 +219,7 @@ sub time {
    my $class = shift;
 
    @_
-      and croak "AnyEvent->time wrongly called with paramaters";
+      and confess "AnyEvent->time wrongly called with paramaters";
 
    $class->SUPER::time (@_)
 }
@@ -228,7 +228,7 @@ sub now {
    my $class = shift;
 
    @_
-      and croak "AnyEvent->now wrongly called with paramaters";
+      and confess "AnyEvent->now wrongly called with paramaters";
 
    $class->SUPER::now (@_)
 }
