@@ -14,10 +14,18 @@ TODO: AnyEvent::Handle with AnyEvent::IO?
 TODO: invalid. and localhost. specialcasing inside AEDNS and not AESocket (rfc6761)
 TODO: maybe implement env variable to give hosts precedence
 
+TODO: Ilya Chesnokov, resoolver requests, limit.
+TODO: improve confess skipping
+TODO: Mike Lowell AnyEvent + libuv
         - work around a newly introduced bug in Socket 2.011 (an
           errornous sun_length check) (analyzed by Maxime Soulé).
 	- AnyEvent::TLS didn't load (but refer to) AnyEvent::Socket
           (analyzed by Ben Magistro).
+        - AnyEvent::Strict will now confess, not croak. This is in line with
+          it being a development/debugging tool.
+        - changed default dns resolver "max_outstanding" value from 1 to 10,
+          the latter beinfg the intended value all along
+          (reported by Ilya Chesnokov).
 
 7.07 Tue Dec 17 17:45:02 CET 2013
 	- the documentation for custom tls verify schemes was wrong. make it agree
